Update background / cleanup

--- a/static/css/App.css
+++ b/static/css/App.css
@@ -276,7 +276,7 @@ height: 77px; */
 }
 
 .section-challenges-wrapper{
-  background-color: #FFDDD6;
+  background-color: rgba(255, 221, 214, 0.36);
 }
 
 .collaborations-section-img{
