--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,8 @@
+body {
+    background-image: url("../../static/images/background-grid.png");
+    background-repeat: repeat-y;
+}
+
 .foss-categories-section {
     padding-top: 50px;
 }
@@ -5,11 +10,11 @@
 .foss-focusarea-section {
     background-color: rgba(170, 211, 255, 0.36);
     padding-top: 50px;
+    margin-top: 50px;
 }
 
 .foss-about-section {
     border-top: 3px solid black;
-    padding-top: 50px;
     background-color: white;
 }
 
@@ -32,7 +37,7 @@
 }
 
 .foss-download-body {
-    margin: 50px 0;
+    margin: 30px 0;
     padding-left: 0;
 }
 
@@ -61,6 +66,7 @@
 .foss-footer-section {
     background-color: #FFDFD5;
     padding-top: 30px;
+    padding-bottom: 50px;
 }
 
 .foss-footer-body {
@@ -83,7 +89,6 @@
 .categories-folder-col {
     margin-top: 10vh;
 }
-
 
 li {
     margin: 15px 0;
