--- a/static/css/App.css
+++ b/static/css/App.css
@@ -1,6 +1,11 @@
 @import url(//db.onlinewebfonts.com/c/a0cb693c715aaf804e67963c4d0d4d90?family=ModeSeven);
 @import url('https://fonts.googleapis.com/css2?family=Prompt&display=swap');
 
+@font-face {
+  font-family: AlgolRevived;
+  src: url("../fonts/AlgolRevived.otf") format("opentype");
+}
+
 #gatsby-focus-wrapper{
   overflow-x: hidden ;
 }
@@ -46,6 +51,7 @@
   width: 707px;
   height: 123px;
   margin-top: 50px;
+  padding-left: 21px;
 }
 .right-col {
   padding-left: 100px;
@@ -54,18 +60,20 @@
 .middle-block {
   font-size: 60px;
   line-height: 66px;
-  width: 668px;
+  width: 700px;
   height: 266px;
   margin-top: 42px;
   margin-bottom: 32px;
   margin-left: 20px;
+  font-family: AlgolRevived;
+  color: #000000;
 
 }
 
 hr {
   background-color: #000000;
   height: 3px;
-  width: 900px;
+  width: 775px;
   /* float: left; */
   margin: 0px;
 }
@@ -98,6 +106,7 @@ height: 77px; */
   padding: 15px;
   margin-bottom: 30px;
   box-shadow: 10px 10px;
+  font-family: AlgolRevived;
 }
 .challenges-active {
   background: #baead6 0% 0% no-repeat padding-box;
@@ -210,6 +219,7 @@ height: 77px; */
   width: 387px;
   padding-top: 30px;
   padding-bottom: 23px;
+  font-family: AlgolRevived;
 }
 
 .left-section-advancement {
@@ -256,14 +266,15 @@ height: 77px; */
   color: #000000;
   opacity: 1;
   width: 1025px;
+  font-family: AlgolRevived;
 }
 
 .advancement-last-section-line {
-  width: 900px;
+  width: 925px;
 }
 
 .advancement-last-line {
-  width: 900px;
+  width: 925px;
 }
 
 .section-end-hr{
@@ -335,17 +346,17 @@ text-align: left;
 font-weight: 900;
 font-size:25px;
 line-height:30px;
-font-style: "Prompt";
 letter-spacing: 0px;
 color: #000000;
 width: 950px;
+font-family: "Prompt";
 }
 
 .section-actors-right-last-block{
   text-align: left;
   font-size:25px;
   line-height:30px;
-  font-style: "Prompt";
+  font-family: "Prompt";
   letter-spacing: 0px;
   color: #000000;
   width: 371px;
