--- a/src/styles/circle.css
+++ b/src/styles/circle.css
@@ -1,12 +1,20 @@
-.foss-circle {
-    padding: 10px;
-    margin-bottom: 30px;
-    box-shadow: 3px 2px;
-    border: 3px solid #231F20;
-    padding-top: 7%;
+@font-face {
+  font-family: AlgolRevived;
+  src: url('../../static/fonts/AlgolRevived.otf') format('opentype');
+}
 
-    max-width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    text-align: center;
+.foss-circle {
+  padding: 10px;
+  margin-bottom: 30px;
+  box-shadow: 3px 2px;
+  border: 3px solid #231f20;
+  padding-top: 7%;
+  font-family: AlgolRevived;
+  max-width: 123px;
+  height: 123px;
+  border-radius: 50%;
+  text-align: center;
+  font-size: 19px;
+  line-height: 25px;
+  padding-top: 35px;
 }
