--- a/src/styles/folder.css
+++ b/src/styles/folder.css
@@ -11,9 +11,16 @@ path {
 
 .wrapper{
     position: relative;
-    /* width: 300px;
-    height: 300px; */
+    width: 100%;
+    height: 100%;
+    transition: transform 0.5s ease-in-out;
+    cursor: pointer;
 }
+
+.wrapper:hover {
+    transform: scale(1.05);
+}
+
 .text{
     position: absolute;
     justify-content: center;
