--- a/src/styles/folder.css
+++ b/src/styles/folder.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: AlgolRevived;
+  src: url('../../static/fonts/AlgolRevived.otf') format('opentype');
+}
+
 path {
   stroke: black;
   stroke-width: 0.1;
@@ -15,17 +20,12 @@ path {
     height: 100%;
     transition: transform 0.5s ease-in-out;
     cursor: pointer;
+    font-family: AlgolRevived;
+    text-align: center;
 }
 
 .wrapper:hover {
     transform: scale(1.05);
-}
-
-.text{
-    position: absolute;
-    justify-content: center;
-    top: 5%;
-    padding: 25%;
 }
 
 .small-folder {
@@ -37,6 +37,7 @@ path {
     font-size: 20px;
     border: 2px solid black;
     padding: 7px;
+    transition: transform 0.5s ease-in-out;
     margin: -25% 35%;
     float: left;
     white-space: nowrap;
