--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -146,6 +146,7 @@ li {
 
 .modal-next {
     top: 45vh;
+    width: 2%;
     right: 0;
     margin: 50px;
     z-index: 2;
@@ -156,6 +157,7 @@ li {
 
 .modal-previous {
     top: 45vh;
+    width: 2%;
     left: 0;
     margin: 50px;
     z-index: 2;
@@ -164,7 +166,7 @@ li {
     transition: transform 0.1s linear;
 }
 
-.modal-close:hover, .modal-next, .modal-previous {
+.modal-close:hover, .modal-next:hover, .modal-previous:hover {
     transform: scale(1.1);
 }
 
