--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -116,13 +116,20 @@ li {
     z-index: 1
 }
 
+.folder-image-nested {
+    width: 90%;
+    height: 90%;
+    z-index: 1;
+    margin: auto;
+}
+
 .foss-modal-container {
     position: fixed;
     top: 0;
     left: 0;
     width:100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.6);
+    background: white;
     z-index: 2;
 }
 
