--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -18,6 +18,10 @@
   height: 369px;
   line-height: 50px;
 }
+.section-front-banner-wrapper{
+  background-image: url('../../static/images/landing-page-img.png');
+  height: 1080px;
+}
 
 .first-last-block {
   text-align: left;
@@ -380,15 +384,6 @@ height: 77px; */
   margin-right: 45px;
   float: right;
 }
-<<<<<<< HEAD:static/css/App.css
-
-.front-banner-button > .tooltip-inner {
-  background-color: #fff;
-  color: red;
-}
-
-=======
->>>>>>> master:src/styles/App.css
 .download-text {
   margin-bottom: 0 !important;
   padding-top: 9.67px;
@@ -421,11 +416,7 @@ height: 77px; */
   text-align: left;
   font-size: 22px;
   line-height: 30px;
-<<<<<<< HEAD:static/css/App.css
-  font-family: 'Nunito';
-=======
   font-family: 'Prompt';
->>>>>>> master:src/styles/App.css
   letter-spacing: 0px;
   color: black;
   opacity: 1;
@@ -501,15 +492,10 @@ height: 77px; */
   outline: none;
 }
 
-<<<<<<< HEAD:static/css/App.css
-.front-banner-button .tooltip-inner {
-  background-color: #baead6; 
-=======
 .front-banner-button:active,
 .front-banner-button:focus {
   outline: none;
   border: none;
->>>>>>> master:src/styles/App.css
 }
 .container-front-banner-button {
   height: 45px;
@@ -540,7 +526,6 @@ height: 77px; */
 .active {
   color: #fcfcfc;
 }
-<<<<<<< HEAD:static/css/App.css
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) {
   .sec-row-wrapper-section-advancement {
@@ -550,5 +535,3 @@ height: 77px; */
     padding-left: 10px;
   }
 }
-=======
->>>>>>> master:src/styles/App.css
