--- a/src/styles/FocusAreaContent.css
+++ b/src/styles/FocusAreaContent.css
@@ -3,7 +3,7 @@
 
 @font-face {
     font-family: AlgolRevived;
-    src: url('../../static/fonts/AlgolRevived.otf') format('opentype');
+    src: url('../fonts/AlgolRevived.otf') format('opentype');
   }
   
 
