--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -174,18 +174,20 @@ height: 77px; */
   line-height: 30px;
   letter-spacing: 0px;
   color: #000000;
-  width: 613px;
+  width: 1029px;
 }
 
 .about-us-right-content {
   font-family: 'Nunito';
   text-align: left;
-  font-size: 25px;
+  font-size: 20px;
   line-height: 30px;
   letter-spacing: 0px;
   color: #000000;
   /* margin-left: 330px; */
   width: 613px;
+  font-weight: 900;
+  margin-left: 15px;
 }
 .org-name {
   font-size: 40px !important;
@@ -361,9 +363,6 @@ height: 77px; */
   margin-left: -47px;
 }
 
-.about-us-section-img-ONI {
-  margin-top: 60px;
-}
 .front-banner-download {
   background: #f2b2f5 0% 0% no-repeat padding-box;
   border: 2px solid #000000;
@@ -534,4 +533,8 @@ height: 77px; */
     margin-left: -149px !important;
     padding-left: 10px;
   }
+}
+
+.ONI-section{
+  margin-top: 283px;
 }
