--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,6 @@
 body {
     background-image: url("../../static/images/background-grid.png");
-    background-repeat: repeat-y;
+    background-repeat: repeat;
 }
 
 .foss-categories-section {
