--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -130,8 +130,8 @@ li {
     position: fixed;
     top: 0;
     left: 0;
-    width:100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background: white;
     z-index: 2;
     overflow: scroll;
@@ -157,7 +157,8 @@ li {
 
 .modal-next {
     top: 45vh;
-    width: 2%;
+    width: auto;
+    height: 5vh;
     right: 0;
     margin: 50px;
     z-index: 2;
