--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -377,7 +377,13 @@ height: 77px; */
   margin-top: 38px;
   margin-right: 45px;
   float: right;
+  transition: transform 0.5s ease-in-out;
 }
+
+.front-banner-download:hover {
+  transform: scale(1.03);
+}
+
 .download-text {
   margin-bottom: 0 !important;
   padding-top: 9.67px;
@@ -560,12 +566,12 @@ height: 77px; */
 
   .normal-folder {
     font-size: 1.6rem !important;
-    padding: 26% 30%;
+    padding: 29% 30%;
     text-align: left;
   }
 
   .folder-caption {
-    margin: -30% 40% !important;
+    margin: -30% 34% !important;
   }
 
   .opportunities-title {
@@ -596,7 +602,7 @@ height: 77px; */
   .text-left-1 {
     padding-left: 45px;
     overflow-wrap: break-word;
-    width: 99%;
+    width: 95%;
   }
 
   .right-col {
@@ -612,14 +618,39 @@ height: 77px; */
     object-fit: contain;
   }
 
+  .foss-circle {
+    margin-top: 80px;
+  }
+
+  .small-folder {
+    margin-left: 2% !important;
+  }
+
+  .recommendations-section-img {
+    margin-left: auto !important;
+  }
+
   .first-last-block {
     margin-left: 50px;
     margin-top: 40px;
     width: 80% !important;
   }
 
-  .recommendations-section-img {
-    margin-left: auto !important;
+  .actors-section-img {
+    display: none;
+  }
+
+  .section-actors-right-col {
+    padding: 50px;
+    margin-top: 50px;
+  }
+
+  .section-actors-right-first-block {
+    width: auto !important;
+  }
+
+  .section-actors-right-last-block {
+    width: auto !important;
   }
 }
 
