Fix folder for different res

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -537,6 +537,45 @@ height: 77px; */
   height: 33.33vh;
 }
 
+@media only screen and (max-width: 1300px) {
+  .download-folder {
+    font-size: 1.4vw;
+  }
+
+  .folder-caption {
+    margin: -30% 28%;
+  }
+
+  .hide-text-md {
+    display: none;
+  }
+}
+
+
+@media only screen and (max-width: 1700px) {
+  .wrapper {
+    width: 140%;
+    left: -30%
+  }
+}
+
+
+@media only screen and (max-width: 991px) {
+  .wrapper {
+    width: 100% !important;
+    left: auto !important;
+    font-size: 3rem;
+  }
+
+  .folder-caption {
+    margin: -35% 45%;
+  }
+
+  .hide-text-md {
+    display: block !important;
+  }
+}
+
 
 @media only screen and (max-width: 820px) {
   .foss-categories-text {
@@ -570,6 +609,11 @@ height: 77px; */
     text-align: left;
   }
 
+  .another-normal-folder {
+    font-size: 1.6rem !important;
+    text-align: left;
+  }
+
   .folder-caption {
     margin: -30% 34% !important;
   }
@@ -587,7 +631,7 @@ height: 77px; */
   }
 
   .download-folder {
-    font-size: 19px;
+    font-size: 4vw !important;
   }
 
   .section-container {
@@ -651,6 +695,10 @@ height: 77px; */
 
   .section-actors-right-last-block {
     width: auto !important;
+  }
+
+  .categories-folder-first {
+    margin-top: 70vh !important;
   }
 }
 
