--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -963,6 +963,7 @@ height: 77px; */
 .advancement-right-last-section{
   font-size: 53px;
   width: 70vw;
+  margin-left: -14px;
 }
 .section-actors-right-first-block{
   width: 53vw;
@@ -1036,6 +1037,12 @@ margin-left: 20px;
   margin-left: 100px;
   padding-left: 20px;
 }
+.front-banner-nav{
+  margin-top: 10px;
+}
+.front-banner-download{
+  margin-top: 18px;
+}
 }
 
 @media only screen and (min-device-width: 1300px) and (max-device-width: 1400px) and (-webkit-min-device-pixel-ratio: 2) {
@@ -1043,7 +1050,9 @@ margin-left: 20px;
     height: 792px;
   
   }
-  
+  .front-banner-download{
+    margin-top: 18px;
+  }
   .section-container{
     padding-top: 15px;
     margin-left: 50px;
@@ -1064,6 +1073,7 @@ margin-left: 20px;
   .advancement-right-last-section{
     font-size: 53px;
     width: 50vw;
+    margin-left: -14px;
   }
   .section-actors-right-first-block{
     width: 53vw;
@@ -1223,6 +1233,38 @@ margin-left: 20px;
     .collaborations-section-img{
       margin-left: 0px;
       margin-top: 0px;
+    }
+    .ecosystemOne-section-img {
+      margin-left: 100px;
+    }
+    
+    .ecosystemTwo-section-img {
+    margin-left: 20px;
+    }
+    
+    .ecosystemThree-section-img {
+      margin-left: 20px;
+    }
+    .ecosystemFour-section-img {
+      margin-left: 20px;
+    }
+    .foss-cc-by-content{
+      margin-top: 50px;
+    }
+    .ONI-section{
+      margin-top: 25px;
+    }
+    .about-us-right-content{
+      margin-left: 10px;
+    }
+    .front-banner-nav{
+      margin-top: 10px;
+    }
+    .foss-container{
+      margin-left: 84px;
+    }
+    .title-advancement{
+      margin-left: -45px;
     }
     }
 
