set height of download button

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1152,6 +1152,9 @@ margin-left: 20px;
       height: 792px;
     
     }
+    .front-banner-download{
+      height: 58px;
+    }
     
     .section-container{
       padding-top: 15px;
