--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -4,19 +4,27 @@
   overflow-x: hidden;
 }
 
+.cc-logo {
+  position: absolute;
+  bottom: -50px;
+  left: 0;
+}
+
 .foss-cc-by-content{
-  font-size: 25px;
+  font-size: 16px;
   font-family: "Nunito";
-  display: flex;
   justify-content: center;
+  margin-top: 20px;
 }
 .foss-cc-by-img-1{
   margin-left: 14px;
   margin-top: -10px;
+  width: 40px;
 }
 .foss-cc-by-img-2{
   margin-left: 5px;
   margin-top: -10px;
+  width: 40px;
 }
 
 .cdl-link{
@@ -41,7 +49,7 @@
 }
 .section-front-banner-wrapper{
   background-image: url('../../static/images/landing-page-img.png');
-  height: 1080px;
+  height: 100vh;
   background-size: 100%;
   background-repeat: no-repeat;
 }
@@ -55,7 +63,6 @@
   color: #000000;
   line-height: 30px;
   opacity: 1;
-  width: 707px;
   margin-bottom: 30px;
 }
 
@@ -68,7 +75,6 @@
   color: #000000;
   line-height: 30px;
   opacity: 1;
-  width: 707px;
   margin-bottom: 30px;
 }
 
@@ -94,8 +100,6 @@
 .middle-block {
   font-size: 60px;
   line-height: 66px;
-  width: 773px;
-  height: 266px;
   margin-top: 42px;
   margin-bottom: 32px;
   margin-left: 20px;
@@ -106,7 +110,6 @@
 hr {
   background-color: #000000;
   height: 3px;
-  width: 775px;
   /* float: left; */
   margin: 0px;
 }
@@ -120,6 +123,7 @@ hr {
   opacity: 1;
   width: 100%;
   line-height: 50px;
+  word-wrap: break-word;
 }
 
 .challenges {
@@ -143,9 +147,9 @@ height: 77px; */
 .challenges-active {
   background: #baead6 0% 0% no-repeat padding-box;
 }
-.container-challenges {
-  margin-left: 100px;
-}
+/*.container-challenges {*/
+/*  margin-left: 100px;*/
+/*}*/
 
 .container-challenges-content {
   border: 1px solid #707070;
@@ -189,8 +193,6 @@ span {
   text-align: center;
   line-height: 41px;
   font-size: 31px;
-  /* width: 273px;
-height: 77px; */
   letter-spacing: 0px;
   color: black;
   opacity: 1;
@@ -199,7 +201,7 @@ height: 77px; */
   padding-right: 39px;
   padding-top: 12px;
   padding-bottom: 14px;
-  margin: 30px;
+  margin-bottom: 30px;
   box-shadow: 10px 10px;
   font-weight: 900;
 }
@@ -241,10 +243,6 @@ height: 77px; */
   line-height: 50px;
 }
 
-.left-line {
-  width: 400px;
-}
-
 .advancement-left-content {
   text-align: left;
   font-size: 30px;
@@ -252,7 +250,6 @@ height: 77px; */
   letter-spacing: 0px;
   color: #000000;
   opacity: 1;
-  width: 387px;
   padding-top: 30px;
   padding-bottom: 23px;
   font-family: AlgolRevived;
@@ -262,10 +259,10 @@ height: 77px; */
   margin-top: 67px;
 }
 
-.advancement-right {
-  padding-top: 21px;
-  padding-left: 100px;
-}
+/*.advancement-right {*/
+/*  padding-top: 21px;*/
+/*  padding-left: 100px;*/
+/*}*/
 
 .advancement-right-title {
   text-align: left;
@@ -275,7 +272,7 @@ height: 77px; */
   letter-spacing: 0px;
   color: #000000;
   opacity: 1;
-  padding-top: 21px;
+  padding-top: 40px;
 }
 
 .advancement-right-content {
@@ -287,7 +284,6 @@ height: 77px; */
   color: #000000;
   opacity: 1;
   font-family: 'Nunito';
-  width: 751px;
   display: inline-block;
 }
 
@@ -301,16 +297,7 @@ height: 77px; */
   letter-spacing: 0px;
   color: #000000;
   opacity: 1;
-  width: 1025px;
   font-family: AlgolRevived;
-}
-
-.advancement-last-section-line {
-  width: 925px;
-}
-
-.advancement-last-line {
-  width: 925px;
 }
 
 .section-end-hr {
@@ -319,7 +306,8 @@ height: 77px; */
 }
 
 .challenges-section-img {
-  padding-top: 400px;
+  bottom: 0;
+  position: relative;
 }
 
 .section-challenges-wrapper {
@@ -574,6 +562,18 @@ height: 77px; */
   z-index: 1;
 }
 
+.about-advancement-bottom {
+  position: absolute;
+  bottom: 0;
+  z-index: 1;
+  margin: 5%;
+  width: 40vw;
+}
+
+.hide-text-lg {
+  display: none;
+}
+
 /*.categories-folder-rcontainer {
   height: 33.33vh;
 }*/
@@ -593,15 +593,24 @@ height: 77px; */
 
   .categories-folder, .categoires-folder-first {
     /* margin-top: 40vh; */
-    margin-top: 320px;
-}
+    margin-top: 380px;
+  }
+
+  .foss-container {
+    width: 98.5%;
+    padding-right: 45px;
+    padding-left: 25px;
+  }
 }
 
 
 @media only screen and (max-width: 1700px) {
   .wrapper {
     width: 140%;
-    left: -30%
+  }
+
+  .timeline-folder {
+    left: -25%;
   }
 }
 
@@ -620,10 +629,30 @@ height: 77px; */
   .hide-text-md {
     display: block !important;
   }
+
+  .timeline-folder {
+    left: -4%;
+  }
+}
+
+@media only screen and (max-width: 766px) {
+  .download-folder {
+    font-size: 4vw !important;
+  }
 }
 
 
 @media only screen and (max-width: 820px) {
+  .hide-text-lg {
+    display: block !important;
+  }
+
+  .foss-container {
+    width: 98.5%;
+    padding-right: 15px !important;
+    padding-left: 15px !important;
+  }
+
   .foss-categories-text {
       margin: 50px 5px 5px 5px !important;
   }
@@ -676,10 +705,6 @@ height: 77px; */
 
   .about-us-title {
     margin-left: 20px !important;
-  }
-
-  .download-folder {
-    font-size: 4vw !important;
   }
 
   .section-container {
@@ -747,6 +772,10 @@ height: 77px; */
   }
   .categories-folder-first {
     margin-top: 50vh !important;
+  }
+
+  .download-folder-container {
+    left: -7%;
   }
 
 }
@@ -1285,4 +1314,25 @@ margin-left: 20px;
 
 .folder-width-full {
   width: 100% !important;
+}
+
+.index-card {
+  border: 2px solid black;
+  padding: 20px;
+  padding: 10px;
+  width: 80px;
+  font-size: 2.5rem;
+  text-align: center;
+  box-shadow: 10px 10px;
+  background-color: white;
+  margin-bottom: 50px;
+}
+
+.index-card-absolute {
+  position: absolute;
+}
+
+.download-folder-container {
+  left: -14%;
+  position: relative;
 }
