--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -54,7 +54,7 @@ body {
     padding-right: 135px;
     padding-left: 115px;
     padding-top: 50px;
-    margin: 50px 15px 50px 0;
+    margin: 50px 15px 0 0;
 }
 
 .foss-about {
