--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -45,8 +45,7 @@
   letter-spacing: 0px;
   color: #000000;
   opacity: 1;
-  width: 462px;
-  height: 369px;
+  word-wrap: break-word;
   line-height: 50px;
 }
 .section-front-banner-wrapper{
@@ -585,7 +584,7 @@ height: 77px; */
 
   .categories-folder, .categoires-folder-first {
     /* margin-top: 40vh; */
-    margin-top: 380px;
+    margin-top: 480px !important;
   }
 
   .foss-container {
@@ -669,7 +668,7 @@ height: 77px; */
   }
 
   .normal-folder {
-    font-size: 1.6rem !important;
+    font-size: 1.8rem !important;
     padding: 29% 30%;
     text-align: left;
   }
@@ -1281,7 +1280,15 @@ margin-left: 20px;
     }
 
 .ONI-section{
-  margin-top: 60px;
+  margin-top: 50px;
+}
+
+.present-margin {
+  margin: -25% 30% !important;
+}
+
+.about-us-section-img-ONI {
+  width: 100%;
 }
 
 .folder-width-full {
