--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -637,6 +637,9 @@ height: 77px; */
 
 
 @media only screen and (max-width: 820px) {
+  .footer-cc {
+    margin-left: auto !important;
+  }
   .hide-text-lg {
     display: block !important;
   }
